<resources>
    <string name="app_name">Reminders</string>
    <string name="btn_yes">Oh Yeah</string>
    <string name="btn_no">No Way</string>

    <string name="channel_notifications">Notifications</string>

    <string name="reminder_title_title">Title</string>
    <string name="reminder_body_title">Content</string>
    <string name="reminder_time_title">Time</string>
    <string name="reminder_time_now">Now</string>
    <string name="reminder_date_title">Date</string>
    <string name="reminder_repeat_title">Repeat</string>
    <string name="reminder_repeat_today">Today</string>
    <string name="reminder_repeat_tomorrow">Tomorrow</string>

    <string name="reminder_list_empty">Hmmm, no reminders here.\n\nClick the + button below to add one.</string>

    <string name="title_add_reminder">New Reminder</string>
    <string name="title_edit_reminder">Edit Reminder</string>
    <string name="title_select_recurrence">Select Recurrence</string>

    <string name="menu_save_reminder">Save</string>
    <string name="menu_delete_reminder">Delete</string>
    <string name="menu_delete_all">Delete All</string>
    <string name="menu_stats">Stats</string>

    <string name="recurrence_none">Once</string>
    <string name="recurrence_hourly">Hourly</string>
    <string name="recurrence_daily">Daily</string>
    <string name="recurrence_weekly">Weekly</string>
    <string name="recurrence_monthly">Monthly</string>
    <string name="recurrence_yearly">Yearly</string>

    <string name="time_preset_morning">AM</string>
    <string name="time_preset_evening">PM</string>

    <string name="spinner_loading_generic">Loading…</string>
    <string name="spinner_loading_reminders">Grabbing Your Reminders…</string>

    <string name="shortcut_new_reminder_title">New Reminder</string>
    <string name="shortcut_eod_title">End of day</string>
    <string name="shortcut_tonight_title">Tonight</string>
    <string name="shortcut_tomorrow_morning_title">Tomorrow morning</string>

    <string name="dialog_title_delete_all_reminders">Delete All Reminders?</string>
    <string name="dialog_message_delete_all_reminders">Are you sure you want to delete all your saved reminders?</string>
    <string name="dialog_title_delete_reminder">Delete Reminder?</string>
    <string name="dialog_message_delete_reminder">Are you sure you want to delete this reminder?</string>

    <string name="snooze_1_hour">Snooze 1 hour</string>
    <string name="snooze_3_hours">3 hours</string>
    <string name="snooze_tomorrow">Tomorrow</string>

    <string name="snackbar_undo_text">Reminder deleted</string>
    <string name="snackbar_undo_action">Undo</string>

    <string name="stats_warning">WARNING: Under heavy construction, use at your own risk.</string>
    <string name="stats_total_label">Reminders triggered:</string>
    <string name="stats_oldest_label">User Since:</string>
</resources>
